2021-03-21 (12.21)
	COMMON: Fix square bracket field access issue

2021-02-23 (12.21)
	COMMON: Fix crash when line length limit exceeded

2021-01-18 (12.21)
	COMMON: Handle octal escapes correctly

2020-12-19 (12.20)
	SDL: Update editor popup appearance

2020-11-19 (12.20)
	COMMON: Fix to allow multiple modules and units within saem program

2020-11-13 (12.20)
	ANDROID: add option to preserve user data when app uninstalled

2020-11-10 (12.20)
	ANDROID: change path label when displaying project folder
	COMMON: ensure INT datatype is always 64 bits

2020-11-01 (12.20)
	CONSOLE: give error when file not found

2020-10-31 (12.20)
	SDL: implemented restoring the cursor position

2020-10-29 (12.20)
	COMMON: Implemented c-styles escape sequences

2020-10-27 (12.20)
	COMMON: add support for inline assignment of export variables
	COMMON: add support for unit alias names

2020-10-21 (12.20)
	ANDROID: upgrade to target android 29

2020-10-21 (12.20)
	COMMON: Fix to allow c-modules to be called from units

2020-07-16 (12.19)
	COMMON: Fix 'Print #' on Windows to use Windows line endings

2020-07-12 (12.19)
	ANDROID: fix layout issue with samsung mobiles
	ANDROID: save and restore the selected theme
	ANDROID: fix access to external storage

2020-06-14 (12.19)
	UI: Use theme colours in main display #94
	UI: Added theme menu

2020-06-14 (12.19)
	FLTK: line numbers colours #93
	SDL: restore window size #95

2020-06-06 (12.19)
	COMMON: minor performance tweak

2020-05-11 (12.19)
	ANDROID: complain when samsung keyboard detected
	COMMON: fix compile warnings

2020-05-11 (12.19)
	FLTK: Fix compile warnings with updated gcc

2020-05-10 (12.19)
	COMMON: Fix ABSMIN/ABSMAX transposed #96

2020-05-09 (12.19)
	COMMON: Fix crash when passing non-array to CHART
	SDL: show icon in linux build

2020-05-07 (12.19)
	COMMON: Fix image.save() to array destination

2020-05-04 (12.19)
	COMMON: INPUT crash #99
	COMMON: Fix compile warnings with updated gcc

2020-03-07 (12.19)