@@ -887,10 +887,7 @@ void System::setupPath(String &loadPath) {
 }
 
 void System::setDimensions() {
-  os_graf_mx = _output->getWidth();
-  os_graf_my = _output->getHeight();
-  setsysvar_int(SYSVAR_XMAX, os_graf_mx - 1);
-  setsysvar_int(SYSVAR_YMAX, os_graf_my - 1);
+  dev_resize(_output->getWidth(), _output->getHeight());
 }
 
 void System::setRunning(bool running) {
